--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,14 +3,14 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "autoprefixer": "^10.4.14",
-    "axios": "^1.6.0",
-    "jspdf": "^3.0.1",
-    "postcss": "^8.4.24",
+    "autoprefixer": "^10.4.16",
+    "axios": "^1.6.2",
+    "jspdf": "^3.0.2",
+    "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^0.0.0",
-    "tailwindcss": "^3.3.0"
+    "react-scripts": "^5.0.1",
+    "tailwindcss": "^3.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,5 +35,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "overrides": {
+    "nth-check": "^2.0.1",
+    "postcss": "^8.4.32"
   }
 }
