Make headers thinner - reduced padding and font sizes

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Prompts to Insights",
-  "name": "Prompts to Insights - Natural Language to SQL Chat",
+  "short_name": "Counterparty Risk Assistant",
+  "name": "Counterparty Risk Assistant - Natural Language to SQL Chat",
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
