--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
-# Environment variables
+# Environment files
 .env
 .env.local
-.env.production
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Dependencies
+node_modules/
+frontend/node_modules/
 
 # Python
 __pycache__/
@@ -9,44 +15,94 @@ __pycache__/
 *$py.class
 *.so
 .Python
-venv/
-env/
-ENV/
-
-# Node.js
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.npm
-.cache/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
 # Logs
 *.log
-nohup.out
+logs/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Database
-*.db
-*.sqlite
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
 
-# IDE
+# Coverage directory used by tools like istanbul
+coverage/
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env
+
+# IDE files
 .vscode/
 .idea/
 *.swp
 *.swo
+*~
 
-# OS
+# OS generated files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
 
-# Build outputs
-build/
-dist/
-*.egg-info/
+# Database files
+*.db
+*.sqlite
+*.sqlite3
 
 # Cache files
 schema_cache.json
-backend/schema_cache.json
 
-# Data files (optional - uncomment if you don't want to track data)
-# data/
+# Generated reports and outputs
+smbc_reporting_tool/reports/
+smbc_reporting_tool/output/
+*.pptx
+*.pdf
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+
+# Build outputs
+frontend/build/
+frontend/dist/
