feat: Enhanced CCR Deck Assistant with image cropping and PowerPoint-style layout
- Added automatic image cropping functionality (2x3 grid)
- Implemented PowerPoint-style results layout with thumbnails
- Added cancel analysis feature with AbortController
- Fixed backend consolidation to single port (8000)
- Enhanced UI with professional styling and responsive design
- Improved error handling and user feedback
- Updated API configuration for unified backend
- Added comprehensive logging for debugging

Features:
✅ Image cropping and splitting for detailed analysis
✅ PowerPoint-style preview layout
✅ Cancel analysis during processing
✅ Unified backend architecture
✅ Professional UI/UX improvements
✅ Mobile-responsive design

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,13 +2,13 @@
 # Main backend API URL (default: http://localhost:8000)
 REACT_APP_MAIN_API_URL=http://localhost:8000
 
-# CCR backend API URL (default: http://localhost:8001)
-REACT_APP_CCR_API_URL=http://localhost:8001
+# CCR backend API URL (same as main API - unified backend)
+REACT_APP_CCR_API_URL=http://localhost:8000
 
-# Examples with IP addresses:
+# Examples with IP addresses (unified backend):
 # REACT_APP_MAIN_API_URL=http://192.168.1.100:8000
-# REACT_APP_CCR_API_URL=http://192.168.1.100:8001
+# REACT_APP_CCR_API_URL=http://192.168.1.100:8000
 
-# Examples with different IPs:
+# Examples with different server (same port):
 # REACT_APP_MAIN_API_URL=http://10.0.0.5:8000
-# REACT_APP_CCR_API_URL=http://10.0.0.6:8001
+# REACT_APP_CCR_API_URL=http://10.0.0.5:8000
