--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,3 +7,6 @@ pymysql>=1.0.0
 python-dotenv>=1.0.0
 cryptography>=3.4.8
 mysql-connector-python>=8.0.0
+python-multipart>=0.0.6
+pillow>=10.0.0
+python-pptx>=0.6.21
