--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.9.4",
-    "react-scripts": "^0.0.0",
     "tailwindcss": "^3.3.6"
   },
   "scripts": {
@@ -40,5 +39,8 @@
   "overrides": {
     "nth-check": "^2.0.1",
     "postcss": "^8.4.32"
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   }
 }
