feat: Working version v1.0 - Full-stack SMBC Risk Management Suite
- Complete React frontend with SMBC branding
- FastAPI backend with unified endpoints
- CCR Deck Assistant with PowerPoint generation
- Admin dashboard with feedback management
- Session management and chat history
- Executive report generation
- Image analysis and cropping functionality
- Comprehensive error handling and logging

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,8 @@
     "postcss": "^8.4.32"
   },
   "devDependencies": {
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "react-scripts": "^5.0.1"
   }
 }
