cleanup: Remove unused files and improve project structure
- Remove log files, swap files, and temporary scripts
- Clean up duplicate environment files
- Remove unused data directory
- Update gitignore for better file management
- Remove Python cache files and build artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -95,8 +95,6 @@ schema_cache.json
 # Generated reports and outputs
 smbc_reporting_tool/reports/
 smbc_reporting_tool/output/
-*.pptx
-*.pdf
 
 # Temporary files
 tmp/
@@ -106,3 +104,15 @@ temp/
 # Build outputs
 frontend/build/
 frontend/dist/
+
+# Server logs
+server.log
+frontend.log
+backend.log
+
+# Package locks (keep only main one)
+package-lock.json
+
+# Vim swap files
+*.swp
+*.swo
